[package]
name = "anion"
version = "0.1.0"
authors = ["Andrew Kubera <andrewkubera@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/akubera/anion-rs"
documentation = "https://akubera.github.io/anion-rs/docs/anion/"
description = """
Interface to the Ion serialization data format (developed by Amazon).
"""



[dependencies]
pest = "0.4"
rustfmt = {version = "0.5", optional = true}
num-bigint = {version = "0.1.35", default-features = false}
num-rational = {version = "0.1.35", default-features = false}
#num-bigdecimal = {path = "../num/bigdecimal"}
num-bigdecimal = {git = "https://github.com/akubera/num", rev = "651b4f7bdb02b98d83a04656"}

